# nicegui-gauge

./: .gitignore  Dockerfile  MANIFEST.in  MIGRATION.md  README.md  SETUP.md  docker-compose.yml  gauge_svg_full.py  generate_backgrounds.py  pyproject.toml  requirements.txt
gauge/: __init__.py  gauge_svg_full.py
test_apps/: test_both_gauges.py  test_heading_gauge.py  test_speed_gauge.py
